Fix: One Liner - Vertical Align

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -4001,6 +4001,10 @@
     height: var(--uc-tabbar-height) !important;
   }
 
+  #nav-bar > * {
+    transform: translateY(calc((var(--uc-tabbar-height) + var(--uc-navbar-hide-height)) / 2));
+  }
+
   #urlbar-container {
     min-width: 0px !important;
   }
